--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,66 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+#app {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 body {
-    margin: 0;
-    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #f2f2f2;
+}
+
+div.navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 80px;
+    background-color: #4A90E2;
+}
+.navbar > img {
+    width: 121px;
+    height: 24px;
+}
+
+.avatar-container {
+    color: #fff;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.avatar-container > img {
+    height: 36px;
+    width: 36px;
+}
+
+.post-list {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    margin: 0 20px;
+    align-items: flex-start;
+    justify-content: center;
+    border: solid 1px red;
+}
+
+.post {
+    display: flex;
+    min-width: 100px;
+    height: 100px;
+    border: solid 1px;
 }
