--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 * {
   margin: 0;
@@ -8,59 +8,63 @@
 }
 
 #app {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: #f2f2f2;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #f2f2f2;
 }
 
 div.navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 80px;
-    background-color: #4A90E2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 80px;
+  background-color: #4a90e2;
 }
 .navbar > img {
-    width: 121px;
-    height: 24px;
+  width: 121px;
+  height: 24px;
 }
 
 .avatar-container {
-    color: #fff;
-    font-weight: bold;
-    font-size: 15px;
-    cursor: pointer;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .avatar-container > img {
-    height: 36px;
-    width: 36px;
+  height: 36px;
+  width: 36px;
 }
 
 .post-list {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 100%;
-    margin: 0 20px;
-    align-items: flex-start;
-    justify-content: center;
-    border: solid 1px red;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 0 20px;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px red;
 }
 
 .post {
-    display: flex;
-    min-width: 100px;
-    height: 100px;
-    border: solid 1px;
+  display: flex;
+  min-width: 100px;
+  height: 100px;
+  border: solid 1px;
+  background: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.133916);
+  border-radius: 4px;
+  border-color: #ddd;
+  margin: 10px;
 }
