--- a/src/App.css
+++ b/src/App.css
@@ -54,17 +54,82 @@ div.navbar {
   margin: 0 20px;
   align-items: center;
   justify-content: center;
-  border: solid 1px red;
 }
 
 .post {
   display: flex;
-  min-width: 100px;
-  height: 100px;
+  flex-direction: column;
+  padding: 30px;
+  width: 50%;
   border: solid 1px;
   background: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.133916);
   border-radius: 4px;
   border-color: #ddd;
   margin: 10px;
+}
+
+.post span{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.post-author-section {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+
+.post-author-section img {
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+
+}
+
+.date {
+  color: #ccc;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.author-name-section {
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.author-name {
+  font-weight: bold;
+}
+
+.comment-author-avatar img {
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+}
+
+.post-content-section {
+  padding: 20px 0;
+  border-bottom: solid 1px #ddd;
+}
+
+.post-comment-section {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.post-comments {
+  margin-top: 10px;
+}
+
+.post-comment {
+  margin: 10px;
+  padding: 20px;
+  background: #ddd;
+  border-radius: 30px;
+}
+
+.comment-author-name {
+  font-weight: bold;
+  padding: 5px;
 }
